# GRACE-Client

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  config.yml  pyproject.toml
examples/: README.md  mediterranean_region.geojson  sample_area.geojson
grace_query/: cli.py  config.py  constants.py  polygons.py  problematic.py  sql.py
grace_query/export/: __init__.py  csv_writer.py  netcdf_cf.py  parquet_writer.py
tests/: test_config.py  test_env.py  test_sql.py
